// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UID test UID 1`] = `
<div>
  <span>
    1
  </span>
  <span>
    2
     
    uid1
  </span>
</div>
`;

exports[`UID test UID 2`] = `
<div>
  <span>
    key-3
  </span>
  <span>
    key-4
     
    key-uid2
  </span>
</div>
`;

exports[`UID test UID 3`] = `
Array [
  <span>
    1
  </span>,
  <span>
    2
     
    uid1
  </span>,
  <span>
    5
  </span>,
]
`;

exports[`UID test UID 4`] = `
Array [
  <span>
    1
  </span>,
  <span>
    1
     
    uid1
  </span>,
  <span>
    6
  </span>,
]
`;
